--- a/index.html
+++ b/index.html
@@ -63,5 +63,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <!-- Наш скрипт -->
     <script src="script.js"></script>
+    <script>
+  window.va = window.va || function () { (window.va.q = window.va.q || []).push(arguments); };
+</script>
+<script src="/_vercel/insights/script.js" defer></script>
 </body>
 </html>
